<resources>
    #Titlescreen
    <string name="app_name">DSA Calculator</string>
    <string name="titlescreen_title">DSA Automatisches Würfeln</string>
    <string name="titlescreen_char_button">Charaktererstellung</string>
    <string name="titlescreen_dice_button">Würfeln</string>
    <string name="titlescreen_skill_button">Fähigkeiten</string>
    <string name="titlescreen_button_exit">Exit</string>
    <string name="title_activity_choose_skill">Fähigkeit auswählen</string>

    <string name="profile1_button">1</string>
    <string name="profile2_button">2</string>
    <string name="profile3_button">3</string>
    <string name="profile4_button">4</string>
    <string name="profile5_button">5</string>
    <string name="profile_bar_description">Profile</string>


    <string name="button_confirm">Bestätigen</string>
    <string name="action_settings">Settings</string>

    <string name="charscreen_title">Charakter</string>
    <string name="charscreen_text">Bitte hier Charakterwerte angeben und \nbestätigen zum
        Speichern. \nEs sind lediglich Werte von 0 bis 19 gestattet.</string>
    <string name="charscreen_mu">MU</string>
    <string name="charscreen_kl">KL</string>
    <string name="charscreen_in">IN</string>
    <string name="charscreen_ch">CH</string>
    <string name="charscreen_ff">FF</string>
    <string name="charscreen_ge">GE</string>
    <string name="charscreen_ko">KO</string>
    <string name="charscreen_kk">KK</string>

    <string name="dice_thorw_button">Würfeln</string>
    <string name="throwSkill">(skill)</string>
    <string name="throwFormula">(skillformula)</string>
    <string name="throwDiceLabel">Würfel:</string>
    <string name="throwDiffLabel">Auszugleichen:</string>
    <string name="throwQualityLabel">Qualität:</string>
    <string name="throwResult0">0</string>
    <string name="throwResult1">0</string>
    <string name="throwResult2">0</string>
    <string name="throwCompensate">0</string>
    <string name="throwQuality">0</string>

    <string name="skill_base_value">0</string>

    <string name="char_title">Charaktererstellung</string>
    <string name="char_button_base_values">Eigenschaftswerte</string>
    <string name="char_button_skill_values">Fähigkeitenwerte</string>
    <string name="char_button_profile_creation">Profilerstellung</string>

    <string name="prof_creat_text_title">Profilerstellung</string>
    <string name="prof_creat_edittext_name">Bitte Charactername eingeben</string>
    <string name="prof_creat_text_desc">Hier kann ein neues Profil für einen Charakter angelegt
        werden. Entsprechende Charakterwerte können in den anderen Fenester angegeben werden.
    </string>


</resources>
