<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlescreen_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/buttonThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titlescreen_dice_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChar" />

    <Button
        android:id="@+id/buttonSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titlescreen_skill_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThrow" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titlescreen_button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSkills" />

    <Button
        android:id="@+id/buttonChar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/titlescreen_char_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/profileBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/profile1Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:text="@string/profile1_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/profile2Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile2_button"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/profile3Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile3_button"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/profile4Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile4_button"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/profile5Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile5_button"
            android:layout_marginStart="1dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/charProfileBarDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/profile_bar_description"
        app:layout_constraintBottom_toTopOf="@+id/profileBar"
        app:layout_constraintEnd_toEndOf="@+id/profileBar"
        app:layout_constraintStart_toStartOf="@+id/profileBar" />

</androidx.constraintlayout.widget.ConstraintLayout>