<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dice.DiceActivity">

    <Button
        android:id="@+id/throwDiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/dice_thorw_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/throwSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throwSkill"
        android:textColor="@color/borderColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/throwFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/throwFormula"
        android:textColor="@color/borderColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/throwSkill"
        app:layout_constraintStart_toStartOf="@+id/throwSkill"
        app:layout_constraintTop_toBottomOf="@+id/throwSkill" />

    <TextView
        android:id="@+id/throwResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/throwResult1"
        android:textColor="@color/borderColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/throwSkill"
        app:layout_constraintStart_toStartOf="@+id/throwSkill"
        app:layout_constraintTop_toBottomOf="@+id/throwFormula" />

    <TextView
        android:id="@+id/throwCompensate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/throwCompensate"
        android:textColor="@color/borderColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/throwResult1"
        app:layout_constraintStart_toStartOf="@+id/throwResult1"
        app:layout_constraintTop_toBottomOf="@+id/throwResult1" />

    <TextView
        android:id="@+id/throwResult0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/throwResult0"
        android:textColor="@color/borderColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/throwResult1"
        app:layout_constraintEnd_toStartOf="@+id/throwResult1"
        app:layout_constraintTop_toTopOf="@+id/throwResult1" />

    <TextView
        android:id="@+id/throwResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/throwResult2"
        android:textColor="@color/borderColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/throwResult1"
        app:layout_constraintStart_toEndOf="@+id/throwResult1"
        app:layout_constraintTop_toTopOf="@+id/throwResult1" />

    <Spinner
        android:id="@+id/throwSkillDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/throwCatDropdown"
        app:layout_constraintStart_toStartOf="@+id/throwCatDropdown"
        app:layout_constraintTop_toBottomOf="@+id/throwCatDropdown" />

    <Spinner
        android:id="@+id/throwCatDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/throwSkill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/throwQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/throwQuality"
        android:textColor="@color/borderColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/throwCompensate"
        app:layout_constraintStart_toStartOf="@+id/throwCompensate"
        app:layout_constraintTop_toBottomOf="@+id/throwCompensate" />

    <TextView
        android:id="@+id/throwDiceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throwDiceLabel"
        app:layout_constraintBottom_toBottomOf="@+id/throwResult1"
        app:layout_constraintEnd_toStartOf="@+id/throwResult1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/throwResult1" />

    <TextView
        android:id="@+id/throwDiffLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throwDiffLabel"
        app:layout_constraintBottom_toBottomOf="@+id/throwCompensate"
        app:layout_constraintEnd_toStartOf="@+id/throwCompensate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/throwCompensate" />

    <TextView
        android:id="@+id/throwQualityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throwQualityLabel"
        app:layout_constraintBottom_toBottomOf="@+id/throwQuality"
        app:layout_constraintEnd_toStartOf="@+id/throwQuality"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/throwQuality" />

</androidx.constraintlayout.widget.ConstraintLayout>