<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterBaseValueInput">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCharConf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputKK"
        app:layout_constraintVertical_bias="0.17000002" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/inputMu"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:hint="@string/charscreen_mu"
        app:layout_constraintEnd_toStartOf="@+id/inputKl"
        app:layout_constraintTop_toTopOf="@+id/inputKl" />

    <TextView
        android:id="@+id/tagMu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_mu"
        app:layout_constraintBottom_toTopOf="@+id/inputMu"
        app:layout_constraintEnd_toEndOf="@+id/inputMu"
        app:layout_constraintStart_toStartOf="@+id/inputMu" />

    <EditText
        android:id="@+id/inputKl"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_kl"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tagKl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_kl"
        app:layout_constraintBottom_toTopOf="@+id/inputKl"
        app:layout_constraintEnd_toEndOf="@+id/inputKl"
        app:layout_constraintStart_toStartOf="@+id/inputKl" />

    <EditText
        android:id="@+id/inputIn"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:hint="@string/charscreen_in"
        app:layout_constraintStart_toEndOf="@+id/inputKl"
        app:layout_constraintTop_toTopOf="@+id/inputKl" />

    <TextView
        android:id="@+id/tagIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_in"
        app:layout_constraintBottom_toTopOf="@+id/inputIn"
        app:layout_constraintEnd_toEndOf="@+id/inputIn"
        app:layout_constraintStart_toStartOf="@+id/inputIn" />

    <EditText
        android:id="@+id/inputCh"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_ch"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/inputFF"
        app:layout_constraintTop_toTopOf="@+id/inputFF" />

    <TextView
        android:id="@+id/tagCh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_ch"
        app:layout_constraintBottom_toTopOf="@+id/inputCh"
        app:layout_constraintEnd_toEndOf="@+id/inputCh"
        app:layout_constraintStart_toStartOf="@+id/inputCh" />

    <EditText
        android:id="@+id/inputFF"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_ff"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputKl" />

    <TextView
        android:id="@+id/tagFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_ff"
        app:layout_constraintBottom_toTopOf="@+id/inputFF"
        app:layout_constraintEnd_toEndOf="@+id/inputFF"
        app:layout_constraintStart_toStartOf="@+id/inputFF" />

    <EditText
        android:id="@+id/inputGe"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_ge"
        android:inputType="number"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/inputFF"
        app:layout_constraintTop_toTopOf="@+id/inputFF" />

    <TextView
        android:id="@+id/tagGe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_ge"
        app:layout_constraintBottom_toTopOf="@+id/inputGe"
        app:layout_constraintEnd_toEndOf="@+id/inputGe"
        app:layout_constraintStart_toStartOf="@+id/inputGe" />

    <EditText
        android:id="@+id/inputKo"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_ko"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/inputFF"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFF" />

    <TextView
        android:id="@+id/tagKo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_ko"
        app:layout_constraintBottom_toTopOf="@+id/inputKo"
        app:layout_constraintEnd_toEndOf="@+id/inputKo"
        app:layout_constraintStart_toStartOf="@+id/inputKo" />

    <EditText
        android:id="@+id/inputKK"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/charscreen_kk"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputFF"
        app:layout_constraintTop_toBottomOf="@+id/inputFF" />

    <TextView
        android:id="@+id/tagKK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charscreen_kk"
        app:layout_constraintBottom_toTopOf="@+id/inputKK"
        app:layout_constraintEnd_toEndOf="@+id/inputKK"
        app:layout_constraintStart_toStartOf="@+id/inputKK" />

    <Button
        android:id="@+id/buttonCharConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_confirm"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>