<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterInputDialog">

    <Button
        android:id="@+id/charBaseValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/char_button_base_values"
        app:layout_constraintEnd_toEndOf="@+id/charTitle"
        app:layout_constraintStart_toStartOf="@+id/charTitle"
        app:layout_constraintTop_toBottomOf="@+id/charTitle" />

    <Button
        android:id="@+id/charSkillValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/char_button_skill_values"
        app:layout_constraintEnd_toEndOf="@+id/charTitle"
        app:layout_constraintStart_toStartOf="@+id/charTitle"
        app:layout_constraintTop_toBottomOf="@+id/charBaseValueButton" />

    <TextView
        android:id="@+id/charTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <LinearLayout
        android:id="@+id/profileBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/charProfileBarDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/profile_bar_description"
        app:layout_constraintBottom_toTopOf="@+id/profileBar"
        app:layout_constraintEnd_toEndOf="@+id/profileBar"
        app:layout_constraintStart_toStartOf="@+id/profileBar" />

</androidx.constraintlayout.widget.ConstraintLayout>